Fix QR code errors with long links

--- a/index.html
+++ b/index.html
@@ -1831,7 +1831,7 @@
 					height: 256,
 					colorDark: "#fff",
 					colorLight: "#35384b",
-					correctLevel: QRCode.CorrectLevel.H
+					correctLevel: QRCode.CorrectLevel.L
 				});
 				
 				// Define QR modal header string container and subscription show button
