Place happ app on first place in ios/macos apps list

--- a/index.html
+++ b/index.html
@@ -603,32 +603,38 @@
 						<div class="accordion-body m-0 p-0 pb-2">
 							<div class="accordion" id="accordionOsIos">
 								<div class="accordion-item">
-									<hr class="m-0">
 									<h2 class="accordion-header">
-										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHiddify" aria-expanded="false" aria-controls="collapseOsIosHiddify">
-											<svg class="my-icon-small"><use href="#hiddify"></use></svg>
+										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
+											<svg class="my-icon"><use href="#happ"></use></svg>
 											<span class="d-block w-100 text-center">
-												Hiddify🔥
+												Happ 🔥
 											</span>
 										</button>
 									</h2>
-									<div id="collapseOsIosHiddify" class="accordion-collapse collapse show" data-bs-parent="#accordionOsIos">
+									<div id="collapseOsIosHapp" class="accordion-collapse collapse show" data-bs-parent="#accordionOsIos">
 										<div class="container pb-4">
 											<p><span x-text="$t('needVersion')"></span> <b class="fw-bold">iOS 15+</b></p>
 											<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
 											<p x-text="$t('getAppDescription')"></p>
-											<a href="https://apps.apple.com/us/app/hiddify-proxy-vpn/id6596777532">
+											<a href="https://apps.apple.com/ru/app/happ-proxy-utility-plus/id6746188973">
 												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('downloadApp')"></button>
 											</a>
 											<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
 											<p x-text="$t('addConfigDescription')"></p>
-											<a id="href-ios-hiddify">
+											<a id="href-ios-happ">
 												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
 											</a>
-											<p class="fs-5 fw-bold mt-4">3. <span x-text="$t('doRun')"></span></p>
-											<p x-text="$t('hiddifyAdditional1')"></p>
-											<p x-text="$t('hiddifyAdditional2')"></p>
-											<p x-text="$t('hiddifyAdditional3')"></p>
+											<p class="fs-5 fw-bold mt-4">3. <span x-text="$t('happRouting')"></span></p>
+											<p class="fs-5 fw-bold mt-4" x-text="$t('happRoutingRoscomVPN')"></p>
+											<p x-text="$t('addConfigDescription')"></p>
+											<a id="href-ios-happ-RoscomVPN">
+												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
+											</a><br>
+											<p class="fs-5 fw-bold mt-4" x-text="$t('happRoutingReFilter')"></p>
+											<p x-text="$t('addConfigDescription')"></p>
+											<a id="href-ios-happ-ReFilter">
+												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
+											</a>
 										</div>
 									</div>
 								</div>
@@ -775,38 +781,32 @@
 											</div>
 											<hr class="m-0">
 											<div class="accordion-item">
+												<hr class="m-0">
 												<h2 class="accordion-header">
-													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
-														<svg class="my-icon"><use href="#happ"></use></svg>
+													<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHiddify" aria-expanded="false" aria-controls="collapseOsIosHiddify">
+														<svg class="my-icon-small"><use href="#hiddify"></use></svg>
 														<span class="d-block w-100 text-center">
-															Happ
+															Hiddify
 														</span>
 													</button>
 												</h2>
-												<div id="collapseOsIosHapp" class="accordion-collapse collapse" data-bs-parent="#accordionOsIosAltList">
+												<div id="collapseOsIosHiddify" class="accordion-collapse collapse" data-bs-parent="#accordionOsIosAltList">
 													<div class="container pb-4">
 														<p><span x-text="$t('needVersion')"></span> <b class="fw-bold">iOS 15+</b></p>
 														<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
 														<p x-text="$t('getAppDescription')"></p>
-														<a href="https://apps.apple.com/us/app/happ-proxy-utility/id6504287215">
+														<a href="https://apps.apple.com/us/app/hiddify-proxy-vpn/id6596777532">
 															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('downloadApp')"></button>
 														</a>
 														<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
 														<p x-text="$t('addConfigDescription')"></p>
-														<a id="href-ios-happ">
+														<a id="href-ios-hiddify">
 															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
 														</a>
-														<p class="fs-5 fw-bold mt-4">3. <span x-text="$t('happRouting')"></span></p>
-														<p class="fs-5 fw-bold mt-4" x-text="$t('happRoutingRoscomVPN')"></p>
-														<p x-text="$t('addConfigDescription')"></p>
-														<a id="href-ios-happ-RoscomVPN">
-															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
-														</a><br>
-														<p class="fs-5 fw-bold mt-4" x-text="$t('happRoutingReFilter')"></p>
-														<p x-text="$t('addConfigDescription')"></p>
-														<a id="href-ios-happ-ReFilter">
-															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
-														</a>
+														<p class="fs-5 fw-bold mt-4">3. <span x-text="$t('doRun')"></span></p>
+														<p x-text="$t('hiddifyAdditional1')"></p>
+														<p x-text="$t('hiddifyAdditional2')"></p>
+														<p x-text="$t('hiddifyAdditional3')"></p>
 													</div>
 												</div>
 											</div>
