Add missed <hr>

--- a/index.html
+++ b/index.html
@@ -602,6 +602,7 @@
 					<div id="collapseIos" class="accordion-collapse collapse" data-bs-parent="#accordionOs">
 						<div class="accordion-body m-0 p-0 pb-2">
 							<div class="accordion" id="accordionOsIos">
+								<hr class="m-0">
 								<div class="accordion-item">
 									<h2 class="accordion-header">
 										<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsIosHapp" aria-expanded="false" aria-controls="collapseOsIosHapp">
