Fix clash deeplinks

--- a/index.html
+++ b/index.html
@@ -229,13 +229,13 @@
 				document.getElementById("href-android-hiddify").href = `hiddify://import/${linkFull}`;
 				document.getElementById("href-android-v2rayng").href = `v2rayng://install-config?url=${linkFull}&name=` + serviceName;
 				document.getElementById("href-android-v2raytun").href = `v2raytun://import/${linkFull}#` + serviceName;
-				document.getElementById("href-android-cmfa").href = `clash://install-config?url${linkFull}&name=` + serviceName;
+				document.getElementById("href-android-cmfa").href = `clash://install-config?url=${linkFull}&name=` + serviceName;
 				document.getElementById("href-android-singbox").href = `sing-box://import-remote-profile?url=${linkFull}#` + serviceName;
 				document.getElementById("href-android-happ").href = `happ://add/${linkFull}`;
 				document.getElementById("href-windows-hiddify").href = `hiddify://import/${linkFull}`;
 				document.getElementById("href-windows-invisibleman").href = `invxray://subscription/${linkFull}`;
-				document.getElementById("href-windows-clashvergerev").href = `clash://install-config?url${linkFull}&name=` + serviceName;
-				document.getElementById("href-linux-clashvergerev").href = `clash://install-config?url${linkFull}&name=` + serviceName;
+				document.getElementById("href-windows-clashvergerev").href = `clash://install-config?url=${linkFull}&name=` + serviceName;
+				document.getElementById("href-linux-clashvergerev").href = `clash://install-config?url=${linkFull}&name=` + serviceName;
 				
 				// Happ routing deeplinks
 				document.getElementById("href-ios-happ-RoscomVPN").href = `https://routing.vpn.ru.com/`;
