Place happ app on first place in windows section

--- a/index.html
+++ b/index.html
@@ -665,6 +665,8 @@
 											<a id="href-ios-happ-ReFilter">
 												<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
 											</a>
+											<p class="fs-5 fw-bold mt-4">4. <span x-text="$t('doRun')"></span></p>
+											<p x-text="$t('hiddifyAdditional3')"></p>
 										</div>
 									</div>
 								</div>
@@ -1043,6 +1045,8 @@
 														<a id="href-android-happ-ReFilter">
 															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
 														</a>
+														<p class="fs-5 fw-bold mt-4">4. <span x-text="$t('doRun')"></span></p>
+														<p x-text="$t('hiddifyAdditional3')"></p>
 													</div>
 												</div>
 											</div>
@@ -1067,36 +1071,38 @@
 							<div class="accordion-item">
 								<hr class="m-0">
 								<h2 class="accordion-header">
-									<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#accordionOsWindowsHiddify" aria-expanded="false" aria-controls="accordionOsWindowsHiddify">
-										<svg class="my-icon-small"><use href="#hiddify"></use></svg>
+									<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#accordionOsWindowsHapp" aria-expanded="false" aria-controls="accordionOsWindowsHapp">
+										<svg class="my-icon"><use href="#happ"></use></svg>
 										<span class="d-block w-100 text-center">
-											Hiddify🔥
+											Happ 🔥
 										</span>
 									</button>
 								</h2>
-								<div id="accordionOsWindowsHiddify" class="accordion-collapse collapse show" data-bs-parent="#accordionOsWindows">
+								<div id="accordionOsWindowsHapp" class="accordion-collapse collapse show" data-bs-parent="#accordionOsWindows">
 									<div class="container pb-4">
 										<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
 										<p x-text="$t('getAppDescription')"></p>
-										<a href="https://github.com/hiddify/hiddify-next/releases/latest/download/Hiddify-Windows-Setup-x64.exe">
+										<a href="https://github.com/Happ-proxy/happ-desktop/releases/latest/download/setup-Happ.x86.exe">
 											<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('downloadApp')"></button>
 										</a>
 										<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
 										<p x-text="$t('addConfigDescription')"></p>
-										<a id="href-windows-hiddify">
+										<a id="href-android-happ">
 											<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
 										</a>
-										<p class="fs-5 fw-bold mt-4">3. <span x-text="$t('doRun')"></span></p>
-										<p x-text="$t('hiddifyAdditional1')"></p>
-										<p x-text="$t('hiddifyAdditional2')"></p>
+										<p class="fs-5 fw-bold mt-4">3. <span x-text="$t('happRouting')"></span></p>
+										<p class="fs-5 fw-bold mt-4" x-text="$t('happRoutingRoscomVPN')"></p>
+										<p x-text="$t('addConfigDescription')"></p>
+										<a id="href-android-happ-RoscomVPN">
+											<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
+										</a><br>
+										<p class="fs-5 fw-bold mt-4" x-text="$t('happRoutingReFilter')"></p>
+										<p x-text="$t('addConfigDescription')"></p>
+										<a id="href-android-happ-ReFilter">
+											<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
+										</a>
+										<p class="fs-5 fw-bold mt-4">4. <span x-text="$t('doRun')"></span></p>
 										<p x-text="$t('hiddifyAdditional3')"></p>
-										<div class="my-warning">
-											<p x-text="$t('troubleWin1')"></p>
-											<p x-text="$t('troubleWin2')"></p>
-										</div>
-										<p class="fs-5 fw-bold mt-4">4. VPN-mode:</p>
-										<p x-text="$t('hiddifyTun1')"></p>
-										<p x-text="$t('hiddifyTun2')"></p>
 									</div>
 								</div>
 							</div>
@@ -1159,6 +1165,43 @@
 														<p x-text="$t('troubleWin1')"></p>
 														<p x-text="$t('troubleWin2')"></p>
 													</div>
+												</div>
+											</div>
+										</div>
+										<hr class="m-0">
+										<div class="accordion-item">
+											<hr class="m-0">
+											<h2 class="accordion-header">
+												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#accordionOsWindowsHiddify" aria-expanded="false" aria-controls="accordionOsWindowsHiddify">
+													<svg class="my-icon-small"><use href="#hiddify"></use></svg>
+													<span class="d-block w-100 text-center">
+														Hiddify
+													</span>
+												</button>
+											</h2>
+											<div id="accordionOsWindowsHiddify" class="accordion-collapse collapse" data-bs-parent="#accordionOsWindowsAltList">
+												<div class="container pb-4">
+													<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
+													<p x-text="$t('getAppDescription')"></p>
+													<a href="https://github.com/hiddify/hiddify-next/releases/latest/download/Hiddify-Windows-Setup-x64.exe">
+														<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('downloadApp')"></button>
+													</a>
+													<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
+													<p x-text="$t('addConfigDescription')"></p>
+													<a id="href-windows-hiddify">
+														<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
+													</a>
+													<p class="fs-5 fw-bold mt-4">3. <span x-text="$t('doRun')"></span></p>
+													<p x-text="$t('hiddifyAdditional1')"></p>
+													<p x-text="$t('hiddifyAdditional2')"></p>
+													<p x-text="$t('hiddifyAdditional3')"></p>
+													<div class="my-warning">
+														<p x-text="$t('troubleWin1')"></p>
+														<p x-text="$t('troubleWin2')"></p>
+													</div>
+													<p class="fs-5 fw-bold mt-4">4. VPN-mode:</p>
+													<p x-text="$t('hiddifyTun1')"></p>
+													<p x-text="$t('hiddifyTun2')"></p>
 												</div>
 											</div>
 										</div>
