--- a/index.html
+++ b/index.html
@@ -1663,8 +1663,8 @@
 					proxifyWin3: 'Скачать Proxifier',
 					proxifyWin4: 'Добавьте ваш прокси сервер:',
 					proxifyWin5: 'Необходимо добавить адрес прокси сервера из добавленной ранее программы:',
-					proxifyWin6_1: 'Если вы используете Throne/Nekoray то это 127.0.0.1:2080',
-					proxifyWin6_2: 'В осталньых случаях проверьте адрес прокси сервера в настройках выбранной вами программы',
+					proxifyWin6_1: 'Если вы используете Throne/Nekoray в режиме системного прокси то это 127.0.0.1:2080',
+					proxifyWin6_2: 'В остальных случаях проверьте адрес прокси сервера в настройках выбранной вами программы',
 					proxifyWin7_1: 'Для добавления сервера следуйте',
 					proxifyWin7_2: 'инструкции с сайта Proxifier.',
 					proxifyWin8: 'Настройте необходимые приложения',
